# experiments-cmake-independent_framework_components

./: CMakeLists.txt  README.md
subprojects/application/: CMakeLists.txt
subprojects/application/src/: main.cxx
subprojects/libraries/a/: CMakeLists.txt
subprojects/libraries/a/include/p5/experiments/cmake/framework_with_dedicated_components/: a.hpp
subprojects/libraries/a/src/: main.cxx
subprojects/libraries/b/: CMakeLists.txt
subprojects/libraries/b/include/p5/experiments/cmake/framework_with_dedicated_components/: b.hpp
subprojects/libraries/b/src/: main.cxx
subprojects/root/: CMakeLists.txt  package-config.cmake.in
